--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_vesion"
     kapt "androidx.room:room-compiler:$room_vesion"
     implementation "androidx.room:room-ktx:$room_vesion"
+
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 }
