--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
         compose_ui_version = '1.2.0'
-        room_vesion = '2.4.0'
-        hilt_version = '2.38.1'
+        room_vesion = '2.5.0'
+        hilt_version = '2.44.2'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
